fix on settings button and scrollbar

--- a/src/app/content/about/about.component.scss
+++ b/src/app/content/about/about.component.scss
@@ -7,19 +7,26 @@
   height: 100%;
 }
 
-.img-wrapper {
+.content-wrapper {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-  height: calc(100vh / 3);
-  width: calc(100vh / 3);
-  border-radius: 50%;
-
-  img{
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    object-position: 50% 10%;
-  }
+  flex-direction: column;
 }
+
+
+// .img-wrapper {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   overflow: hidden;
+//   height: calc(100vh / 3);
+//   width: calc(100vh / 3);
+//   border-radius: 50%;
+
+//   img{
+//     height: 100%;
+//     width: 100%;
+//     object-fit: cover;
+//     object-position: 50% 10%;
+//   }
+// }
+
