--- a/src/app/content/content.component.scss
+++ b/src/app/content/content.component.scss
@@ -21,9 +21,30 @@
   flex-direction: column;
   height: 100%;
   width: 100%;
+  overflow-y: auto;
 }
 
 .sidebar-wrapper {
   display: flex;
   flex-direction: row;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 1rem;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: $background-color; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: $surface-color; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: $surface-contrast-transparent-color; 
 }
