--- a/src/app/utility/sidebar/sidebar.component.scss
+++ b/src/app/utility/sidebar/sidebar.component.scss
@@ -67,6 +67,7 @@
 .settings-wrapper {
   width: 100%;
   border-left: 1px solid $surface-color;
+  cursor: pointer;
   &:hover {
     border-left: 1px solid $surface-contrast-color;
   }
@@ -77,7 +78,7 @@
     justify-content: center;
     padding: 0.5rem 0;
     transition: background-color 0.3s;
-    width: 100%;
+    width: 99%;
   
     color: $surface-txt-contrast-transparent-color;
     border-radius: 50%;
